--- a/playlist.html
+++ b/playlist.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Hello, World!</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
  <a href="acestream://02b9307c5c97c86914cc5939d6bbeb5b4ec60b47" rel="nofollow">La1</a><br>
  <a href="acestream://6636a5c1055b5913ddcd0e87a5523f7d935350af" rel="nofollow">La1 UHD</a><br>
  <a href="acestream://60106275d34f995e26bb2cc4a21a42f586c6c555" rel="nofollow">La2</a><br>
@@ -95,3 +102,5 @@
  <a href="acestream://d6cdd724a97fcf851e7ef641c28d6beb8663496e" rel="nofollow">PPVP 2</a><br>
  <a href="acestream://162942adc047d0f78eac056effbe5bbec54a5e51" rel="nofollow">PPVP 3</a><br>
  <a href="acestream://e454681a152a86da504e63694f17f90d0586867d" rel="nofollow">PPVP 4</a><br>
+  </body>
+</html>
